--- a/scoring.html
+++ b/scoring.html
@@ -119,6 +119,10 @@
     status of Rookie.  A player that is 1st Season is not a rookie.  Kickers
     have an additional requirement, they must have been selected in either
     that year's NFL draft or BFFL draft.</td></tr>
+<tr><td>Position Eligibility</td>
+    <td>Whatever a player's eligibility and rookie status is on BFFL draft
+    day, that applies for the entire year.  Changes during the season are
+    ignored.</td></tr>
 <tr><td>Scoring Changes</td>
     <td>Any scoring changes or scoring mistakes must be noticed and settled
     prior to 1:00 Sunday of the following week.  After that, all scoring is
