--- a/week1.html
+++ b/week1.html
@@ -10,8 +10,8 @@
 <tr><td>Richardson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>London</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Karty</td>         <td></td><td align=right>0</td></tr>
@@ -143,7 +143,7 @@
 <tr><td>Pacheco</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Odunze</td>        <td></td><td align=right>0</td></tr>
