--- a/thousand.html
+++ b/thousand.html
@@ -177,6 +177,12 @@
     <td>1245</td>
     <td>Matthew</td>
     <td>670</td></tr>
+<tr><td>2024</td>
+    <td>Week 1</td>
+    <td>Grant Mydland</td>
+    <td>1245</td>
+    <td>Matthew</td>
+    <td>660</td></tr>
 <tr><td>2013</td>
     <td>Week 1</td>
     <td>Grant Mydland</td>
