--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <tr>
 <td bgcolor=#F2F2ED>
 <b>Week</b>
-<a href="week1.html"><b>1P</b></a><br>
+<a href="week1.html"><b>1</b></a>
+<a href="week2.html"><b>2P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -59,44 +60,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(1)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>570</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>570</font></td>
+    <td><font size=2>570</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(5)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>500</font></td>
+    <td><font size=2>355</font></td>
+    <td><font size=2>500</font></td>
+    <td><font size=2>500</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>490</font></td>
+    <td><font size=2>375</font></td>
+    <td><font size=2>490</font></td>
+    <td><font size=2>490</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>570</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>410</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>375</font></td>
+    <td><font size=2>490</font></td>
+    <td><font size=2>375</font></td>
+    <td><font size=2>375</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -106,45 +107,45 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
+<tr><td><font size=2>Grant(10)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>660</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Roger(2)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>895</font></td>
+    <td><font size=2>705</font></td>
+    <td><font size=2>895</font></td>
+    <td><font size=2>895</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(8)</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>705</font></td>
+    <td><font size=2>895</font></td>
+    <td><font size=2>705</font></td>
+    <td><font size=2>705</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>660</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>660</font></td>
+    <td><font size=2>660</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Grant(10)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>355</font></td>
+    <td><font size=2>500</font></td>
+    <td><font size=2>355</font></td>
+    <td><font size=2>355</font></td>
     <td><font size=2>0</font></td>
 </table>
 </table>
