--- a/week1.html
+++ b/week1.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
-<tr><td>Richardson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Richardson</td>    <td></td><td align=right>300</td></tr>
+<tr><td>Mason</td>         <td></td><td align=right>120</td></tr>
+<tr><td>Etienne</td>       <td></td><td align=right>50</td></tr>
 <tr><td>London</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Karty</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>25</td></tr>
+<tr><td>Karty</td>         <td></td><td align=right>75</td></tr>
+<tr><td></td>              <td></td><td align=right>570</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>155</td></tr>
+<tr><td>Hall</td>          <td></td><td align=right>75</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>25</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Reichard</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>65</td></tr>
+<tr><td>Reichard</td>      <td></td><td align=right>20</td></tr>
+<tr><td></td>              <td></td><td align=right>410</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (2)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>330</td></tr>
+<tr><td>Pollard</td>       <td></td><td align=right>190</td></tr>
+<tr><td>JCook</td>         <td></td><td align=right>35</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>30</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>180</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Nabers</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Nabers</td>        <td></td><td align=right>30</td></tr>
+<tr><td></td>              <td></td><td align=right>895</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (8)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>190</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>200</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>85</td></tr>
 <tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>75</td></tr>
+<tr><td>Pitts</td>         <td></td><td align=right>75</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>80</td></tr>
 <tr><td>Benson</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>705</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
-<tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Stroud</td>        <td></td><td align=right>105</td></tr>
+<tr><td>KWilliams</td>     <td></td><td align=right>75</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Rice</td>          <td></td><td align=right>0</td></tr>
+<tr><td>GWilson</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Rice</td>          <td></td><td align=right>50</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>CWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Aubrey</td>        <td></td><td align=right>225</td></tr>
+<tr><td>CWilliams</td>     <td></td><td align=right>5</td></tr>
+<tr><td></td>              <td></td><td align=right>490</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (9)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>50</td></tr>
 <tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>NCollins</td>      <td></td><td align=right>0</td></tr>
+<tr><td>NCollins</td>      <td></td><td align=right>55</td></tr>
 <tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Gano</td>          <td></td><td align=right>80</td></tr>
+<tr><td>Daniels</td>       <td></td><td align=right>140</td></tr>
+<tr><td></td>              <td></td><td align=right>375</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>75</td></tr>
+<tr><td>Gibbs</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>95</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>190</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>130</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>70</td></tr>
+<tr><td>Nix</td>           <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>660</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>200</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>275</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>155</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>125</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>190</td></tr>
+<tr><td>Worthy</td>        <td></td><td align=right>250</td></tr>
+<tr><td></td>              <td></td><td align=right>1245</td></tr>
 </table>
 </td>
 </tr>
@@ -126,28 +126,28 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (5)</b></font></td></tr>
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>30</td></tr>
+<tr><td>Achane</td>        <td></td><td align=right>85</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>75</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>40</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Moody</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Moody</td>         <td></td><td align=right>270</td></tr>
 <tr><td>MHarrison</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>500</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Pacheco</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>120</td></tr>
+<tr><td>Pacheco</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>125</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>60</td></tr>
 <tr><td>Odunze</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>355</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -167,44 +167,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(1)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>570</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>570</font></td>
+    <td><font size=2>570</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(5)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>500</font></td>
+    <td><font size=2>355</font></td>
+    <td><font size=2>500</font></td>
+    <td><font size=2>500</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>490</font></td>
+    <td><font size=2>375</font></td>
+    <td><font size=2>490</font></td>
+    <td><font size=2>490</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>570</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>410</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>375</font></td>
+    <td><font size=2>490</font></td>
+    <td><font size=2>375</font></td>
+    <td><font size=2>375</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -214,44 +214,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
+<tr><td><font size=2>Grant(10)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>660</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Roger(2)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>895</font></td>
+    <td><font size=2>705</font></td>
+    <td><font size=2>895</font></td>
+    <td><font size=2>895</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(8)</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>705</font></td>
+    <td><font size=2>895</font></td>
+    <td><font size=2>705</font></td>
+    <td><font size=2>705</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>660</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>660</font></td>
+    <td><font size=2>660</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Grant(10)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>355</font></td>
+    <td><font size=2>500</font></td>
+    <td><font size=2>355</font></td>
+    <td><font size=2>355</font></td>
     <td><font size=2>0</font></td>
 </table>
