--- a/strength.html
+++ b/strength.html
@@ -4,104 +4,104 @@
 </table>
 <table border=2>
 <tr><td><b>Position</b></td>
+    <td width=42><b>States</b></td>
     <td width=42><b>Roger</b></td>
+    <td width=42><b>Mike</b></td>
+    <td width=42><b>Matthew</b></td>
+    <td width=42><b>Randy</b></td>
     <td width=42><b>Rich</b></td>
     <td width=42><b>Sam</b></td>
-    <td width=42><b>John</b></td>
-    <td width=42><b>States</b></td>
     <td width=42><b>Steven</b></td>
-    <td width=42><b>Randy</b></td>
-    <td width=42><b>Mike</b></td>
-    <td width=42><b>Grant</b></td>
-    <td width=42><b>Matthew</b></td></tr>
+    <td width=42><b>John</b></td>
+    <td width=42><b>Grant</b></td></tr>
 <tr><td align='right'>QB</td>
-    <td align='right'>3385</td>
-    <td align='right'>2050</td>
-    <td align='right'>2885</td>
-    <td align='right'>3060</td>
-    <td align='right'>2075</td>
-    <td align='right'>2500</td>
-    <td align='right'>2800</td>
-    <td align='right'>2040</td>
-    <td align='right'>2210</td>
-    <td align='right'>2200</td></tr>
+    <td align='right'>300</td>
+    <td align='right'>330</td>
+    <td align='right'>105</td>
+    <td align='right'>75</td>
+    <td align='right'>0</td>
+    <td align='right'>120</td>
+    <td align='right'>155</td>
+    <td align='right'>190</td>
+    <td align='right'>50</td>
+    <td align='right'>200</td></tr>
 <tr><td align='right'>Best RB</td>
-    <td align='right'>965</td>
-    <td align='right'>1355</td>
-    <td align='right'>2650</td>
-    <td align='right'>1275</td>
-    <td align='right'>875</td>
-    <td align='right'>1510</td>
-    <td align='right'>1125</td>
-    <td align='right'>980</td>
-    <td align='right'>1510</td>
-    <td align='right'>1245</td></tr>
+    <td align='right'>120</td>
+    <td align='right'>190</td>
+    <td align='right'>75</td>
+    <td align='right'>95</td>
+    <td align='right'>85</td>
+    <td align='right'>125</td>
+    <td align='right'>75</td>
+    <td align='right'>200</td>
+    <td align='right'>50</td>
+    <td align='right'>275</td></tr>
 <tr><td align='right'>Other RB's</td>
-    <td align='right'>1045</td>
-    <td align='right'>1460</td>
-    <td align='right'>1140</td>
-    <td align='right'>1565</td>
-    <td align='right'>1040</td>
-    <td align='right'>1195</td>
-    <td align='right'>990</td>
-    <td align='right'>840</td>
-    <td align='right'>985</td>
-    <td align='right'>1775</td></tr>
+    <td align='right'>50</td>
+    <td align='right'>35</td>
+    <td align='right'>0</td>
+    <td align='right'>50</td>
+    <td align='right'>30</td>
+    <td align='right'>50</td>
+    <td align='right'>40</td>
+    <td align='right'>85</td>
+    <td align='right'>0</td>
+    <td align='right'>50</td></tr>
 <tr><td align='right'>Best WR</td>
-    <td align='right'>1135</td>
-    <td align='right'>930</td>
-    <td align='right'>1455</td>
-    <td align='right'>1430</td>
-    <td align='right'>1935</td>
-    <td align='right'>1235</td>
-    <td align='right'>2120</td>
-    <td align='right'>500</td>
-    <td align='right'>1435</td>
-    <td align='right'>750</td></tr>
+    <td align='right'>0</td>
+    <td align='right'>180</td>
+    <td align='right'>50</td>
+    <td align='right'>190</td>
+    <td align='right'>75</td>
+    <td align='right'>0</td>
+    <td align='right'>30</td>
+    <td align='right'>75</td>
+    <td align='right'>55</td>
+    <td align='right'>155</td></tr>
 <tr><td align='right'>Other WR's</td>
-    <td align='right'>1320</td>
-    <td align='right'>735</td>
-    <td align='right'>1310</td>
-    <td align='right'>1505</td>
-    <td align='right'>1205</td>
-    <td align='right'>775</td>
-    <td align='right'>1435</td>
-    <td align='right'>795</td>
-    <td align='right'>1235</td>
-    <td align='right'>1730</td></tr>
+    <td align='right'>0</td>
+    <td align='right'>30</td>
+    <td align='right'>30</td>
+    <td align='right'>130</td>
+    <td align='right'>40</td>
+    <td align='right'>0</td>
+    <td align='right'>25</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>125</td></tr>
 <tr><td align='right'>TE</td>
-    <td align='right'>630</td>
-    <td align='right'>470</td>
-    <td align='right'>745</td>
-    <td align='right'>480</td>
-    <td align='right'>730</td>
-    <td align='right'>785</td>
-    <td align='right'>745</td>
-    <td align='right'>695</td>
-    <td align='right'>725</td>
-    <td align='right'>1115</td></tr>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>75</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td></tr>
 <tr><td align='right'>K</td>
-    <td align='right'>1130</td>
-    <td align='right'>1500</td>
-    <td align='right'>1490</td>
-    <td align='right'>1320</td>
-    <td align='right'>1420</td>
-    <td align='right'>1435</td>
-    <td align='right'>1605</td>
-    <td align='right'>1065</td>
-    <td align='right'>1010</td>
-    <td align='right'>1395</td></tr>
+    <td align='right'>25</td>
+    <td align='right'>100</td>
+    <td align='right'>225</td>
+    <td align='right'>70</td>
+    <td align='right'>270</td>
+    <td align='right'>60</td>
+    <td align='right'>65</td>
+    <td align='right'>80</td>
+    <td align='right'>80</td>
+    <td align='right'>190</td></tr>
 <tr><td align='right'>R</td>
-    <td align='right'>1240</td>
-    <td align='right'>440</td>
-    <td align='right'>875</td>
-    <td align='right'>1390</td>
-    <td align='right'>920</td>
-    <td align='right'>495</td>
-    <td align='right'>1320</td>
-    <td align='right'>1075</td>
-    <td align='right'>1460</td>
-    <td align='right'>2230</td></tr>
+    <td align='right'>75</td>
+    <td align='right'>30</td>
+    <td align='right'>5</td>
+    <td align='right'>50</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>20</td>
+    <td align='right'>0</td>
+    <td align='right'>140</td>
+    <td align='right'>250</td></tr>
 <tr><td align='right'></td>
     <td align='right'></td>
     <td align='right'></td>
@@ -114,14 +114,14 @@
     <td align='right'></td>
     <td align='right'></td></tr>
 <tr><td align='right'>Total</td>
-    <td align='right'>10850</td>
-    <td align='right'>8940</td>
-    <td align='right'>12550</td>
-    <td align='right'>12025</td>
-    <td align='right'>10200</td>
-    <td align='right'>9930</td>
-    <td align='right'>12140</td>
-    <td align='right'>7990</td>
-    <td align='right'>10570</td>
-    <td align='right'>12440</td></tr>
+    <td align='right'>570</td>
+    <td align='right'>895</td>
+    <td align='right'>490</td>
+    <td align='right'>660</td>
+    <td align='right'>500</td>
+    <td align='right'>355</td>
+    <td align='right'>410</td>
+    <td align='right'>705</td>
+    <td align='right'>375</td>
+    <td align='right'>1245</td></tr>
 </table>
