--- a/pickups.html
+++ b/pickups.html
@@ -11,8 +11,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Traded to Randy</td>
+<td width=50>9/10</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -262,8 +262,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Isaiah Likely/Carson Steele</td>
+<td width=50>9/10</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -324,4 +324,9 @@
 <table width=650 border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
+<tr><td width=50>9/10</td>
+<td width=600>
+Roger - Dallas Goedert (cut Antonio Gibson)<br>
+Randy - pickup ()
+</td></tr>
 </table>
