--- a/roster.html
+++ b/roster.html
@@ -44,7 +44,6 @@
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 <tr><td>CIN</td><td>Chase Brown            </td></tr>
 <tr><td>MIN</td><td>Ty Chandler            </td></tr>
-<tr><td> NE</td><td>Antonio Gibson         </td></tr>
 <tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
@@ -52,6 +51,7 @@
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
+<tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Jason Sanders          </td></tr>
 <tr><td> TB</td><td>Chase McLaughlin       </td></tr>
@@ -137,7 +137,6 @@
 <tr><td>DET</td><td>Jameson Williams       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Sam LaPorta            </td></tr>
-<tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Jake Moody             </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -250,6 +249,7 @@
 <tr><td>CAR</td><td>Diontae Johnson        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Jake Ferguson          </td></tr>
+<tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Graham Gano            </td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
@@ -257,7 +257,6 @@
 <tr><td>WAS</td><td>Jayden Daniels         </td></tr>
 <tr><td> TB</td><td>Bucky Irving           </td></tr>
 <tr><td>NYG</td><td>Tyrone Tracy           </td></tr>
-<tr><td> KC</td><td>Carson Steele          </td></tr>
 </table>
 </td>
 </tr>
