--- a/week2.html
+++ b/week2.html
@@ -57,7 +57,7 @@
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Moody</td>         <td></td><td align=right>0</td></tr>
-<tr><td>MHarrison</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Little</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -111,11 +111,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (9)</b></font></td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>NCollins</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Flowers</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Likely</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
