--- a/week2.html
+++ b/week2.html
@@ -9,10 +9,10 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
 <tr><td>Richardson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Mason</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>London</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Karty</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -22,8 +22,8 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
 <tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
