--- a/roster.html
+++ b/roster.html
@@ -16,7 +16,6 @@
 <tr><td> LV</td><td>Zamir White            </td></tr>
 <tr><td> SF</td><td>Jordan Mason           </td></tr>
 <tr><td>BAL</td><td>Justice Hill           </td></tr>
-<tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td>ATL</td><td>Drake London           </td></tr>
@@ -30,6 +29,7 @@
 <tr><td>LAR</td><td>Joshua Karty           </td></tr>
 <tr><td>LAC</td><td>Kimani Vidal           </td></tr>
 <tr><td> LV</td><td>Brock Bowers           </td></tr>
+<tr><td> SF</td><td>Isaac Guerendo         </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -43,12 +43,12 @@
 <tr><td>TEN</td><td>Tony Pollard           </td></tr>
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 <tr><td>CIN</td><td>Chase Brown            </td></tr>
-<tr><td>MIN</td><td>Ty Chandler            </td></tr>
 <tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
+<tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
