--- a/pickups.html
+++ b/pickups.html
@@ -23,8 +23,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tyler Lockett/Ty Chandler</td>
+<td width=50>9/15</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -324,6 +324,11 @@
 <table width=650 border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
+<tr><td width=50>9/14</td>
+<td width=600>
+Free Pickups:<br>
+States - Isaac Guerendo/Clyde Edwards-Helaire (9/14)
+</td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
 Roger - Dallas Goedert (cut Antonio Gibson)<br>
