--- a/pickups.html
+++ b/pickups.html
@@ -35,8 +35,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Kareem Hunt/Trevor Lawrence</td>
+<td width=50>9/17</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -134,8 +134,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Ty Chandler/Jordan Addison</td>
+<td width=50>9/18</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -327,11 +327,12 @@
 <tr><td width=50>9/14</td>
 <td width=600>
 Free Pickups:<br>
-States - Isaac Guerendo/Clyde Edwards-Helaire (9/14)
+States - Isaac Guerendo/Clyde Edwards-Helaire (9/14)<br>
+Matthew - Carson Steele/Audric Estime (9/17)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
 Roger - Dallas Goedert (cut Antonio Gibson)<br>
-Randy - pickup ()
+Randy - pickup (Derek Carr/- 9/17)
 </td></tr>
 </table>
