--- a/roster.html
+++ b/roster.html
@@ -36,7 +36,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Roger (2)</b></font></td></tr>
 <tr><td>BUF</td><td>Josh Allen             </td></tr>
-<tr><td>JAX</td><td>Trevor Lawrence        </td></tr>
 <tr><td>MIN</td><td>Sam Darnold            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
@@ -44,6 +43,7 @@
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 <tr><td>CIN</td><td>Chase Brown            </td></tr>
 <tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
+<tr><td> KC</td><td>Kareem Hunt            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
@@ -114,8 +114,8 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Bo Nix                 </td></tr>
 <tr><td>JAX</td><td>Brian Thomas           </td></tr>
-<tr><td>DEN</td><td>Audric Estime          </td></tr>
 <tr><td>WAS</td><td>Luke McCaffrey         </td></tr>
+<tr><td> KC</td><td>Carson Steele          </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -123,17 +123,18 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Randy (5)</b></font></td></tr>
 <tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
+<tr><td> NO</td><td>Derek Carr             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Bijan Robinson         </td></tr>
 <tr><td>MIA</td><td>De'Von Achane          </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
 <tr><td>DAL</td><td>Rico Dowdle            </td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
+<tr><td>MIN</td><td>Ty Chandler            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
 <tr><td>JAX</td><td>Christian Kirk         </td></tr>
-<tr><td>MIN</td><td>Jordan Addison         </td></tr>
 <tr><td>DET</td><td>Jameson Williams       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Sam LaPorta            </td></tr>
