--- a/pickups.html
+++ b/pickups.html
@@ -328,7 +328,8 @@
 <td width=600>
 Free Pickups:<br>
 States - Isaac Guerendo/Clyde Edwards-Helaire (9/14)<br>
-Matthew - Carson Steele/Audric Estime (9/17)
+Matthew - Carson Steele/Audric Estime (9/17)<br>
+John - Chris Boswell/Graham Gano (9/18)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
