--- a/roster.html
+++ b/roster.html
@@ -252,8 +252,8 @@
 <tr><td>DAL</td><td>Jake Ferguson          </td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>NYG</td><td>Graham Gano            </td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
+<tr><td>PIT</td><td>Chris Boswell          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Jayden Daniels         </td></tr>
 <tr><td> TB</td><td>Bucky Irving           </td></tr>
