--- a/roster.html
+++ b/roster.html
@@ -187,6 +187,7 @@
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
 <tr><td>CLE</td><td>Jerome Ford            </td></tr>
 <tr><td>CLE</td><td>Nick Chubb             </td></tr>
+<tr><td> GB</td><td>Emanuel Wilson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td> LV</td><td>Davante Adams          </td></tr>
@@ -199,7 +200,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Drake Maye             </td></tr>
 <tr><td>MIN</td><td>Will Reichard          </td></tr>
-<tr><td> GB</td><td>MarShawn Lloyd         </td></tr>
 <tr><td>NYJ</td><td>Braelon Allen          </td></tr>
 <tr><td> NO</td><td>Spencer Rattler        </td></tr>
 </table>
