--- a/pickups.html
+++ b/pickups.html
@@ -330,7 +330,8 @@ Free Pickups:<br>
 States - Isaac Guerendo/Clyde Edwards-Helaire (9/14)<br>
 Matthew - Carson Steele/Audric Estime (9/17)<br>
 John - Chris Boswell/Graham Gano (9/18)<br>
-Sam - Emanuel Wilson/MarShawn Lloyd (9/24)
+Sam - Emanuel Wilson/MarShawn Lloyd (9/24)<br>
+Steven - Jalen McMillan/Ricky Pearsall (9/25)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
