--- a/roster.html
+++ b/roster.html
@@ -228,8 +228,8 @@
 <tr><td>ARI</td><td>Trey Benson            </td></tr>
 <tr><td>CAR</td><td>Jonathon Brooks        </td></tr>
 <tr><td>LAR</td><td>Blake Corum            </td></tr>
-<tr><td> SF</td><td>Ricky Pearsall         </td></tr>
 <tr><td>MIA</td><td>Jaylen Wright          </td></tr>
+<tr><td> TB</td><td>Jalen McMillan         </td></tr>
 </table>
 </td>
 <td valign=top>
