--- a/scoring.html
+++ b/scoring.html
@@ -46,8 +46,10 @@
     <td>45</td></tr>
 <tr><td>50-59 yard FG</td>
     <td>60</td></tr>
-<tr><td>60+ yard FG</td>
+<tr><td>60-69 yard FG</td>
     <td>75</td></tr>
+<tr><td>70+ yard FG</td>
+    <td>90</td></tr>
 </table>
 <br>
 <table border=2>
