--- a/week4.html
+++ b/week4.html
@@ -7,11 +7,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
-<tr><td>Richardson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mason</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>London</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Karty</td>         <td></td><td align=right>0</td></tr>
@@ -37,11 +37,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (2)</b></font></td></tr>
 <tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Charbonnet</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Nabers</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -53,7 +53,7 @@
 <tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Allgeier</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Shakir</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
@@ -67,11 +67,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
 <tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Moss</td>          <td></td><td align=right>0</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Rice</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
+<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
 <tr><td>CWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -129,7 +129,7 @@
 <tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Reichard</td>      <td></td><td align=right>0</td></tr>
