--- a/roster.html
+++ b/roster.html
@@ -272,6 +272,7 @@
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td>CHI</td><td>D'Andre Swift          </td></tr>
 <tr><td>WAS</td><td>Austin Ekeler          </td></tr>
+<tr><td> LV</td><td>Alexander Mattison     </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
 <tr><td>HOU</td><td>Stefon Diggs           </td></tr>
@@ -287,7 +288,6 @@
 <tr><td> GB</td><td>Brayden Narveson       </td></tr>
 <tr><td>ATL</td><td>Michael Penix          </td></tr>
 <tr><td>PHI</td><td>Will Shipley           </td></tr>
-<tr><td>WAS</td><td>Ben Sinnott            </td></tr>
 </table>
 </td>
 <td>
