--- a/pickups.html
+++ b/pickups.html
@@ -267,8 +267,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Alexander Mattison/Ben Sinnott</td>
+<td width=50>10/1</td>
 </tr></table></td>
 </tr>
 <tr>
