--- a/roster.html
+++ b/roster.html
@@ -195,13 +195,13 @@
 <tr><td> NO</td><td>Rashid Shaheed         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
+<tr><td>MIN</td><td>TJ Hockenson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Drake Maye             </td></tr>
 <tr><td>MIN</td><td>Will Reichard          </td></tr>
 <tr><td>NYJ</td><td>Braelon Allen          </td></tr>
-<tr><td> NO</td><td>Spencer Rattler        </td></tr>
 </table>
 </td>
 <td valign=top>
