--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <a href="week2.html"><b>2</b></a>
 <a href="week3.html"><b>3</b></a>
 <a href="week4.html"><b>4</b></a>
-<a href="week5.html"><b>5P</b></a><br>
+<a href="week5.html"><b>5</b></a>
+<a href="week6.html"><b>6P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -62,45 +63,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2235</font></td>
-    <td><font size=2>1890</font></td>
-    <td><font size=2>640</font></td>
-    <td><font size=2>385</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>John(9)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2865</font></td>
-    <td><font size=2>2430</font></td>
+    <td><font size=2>3700</font></td>
+    <td><font size=2>2995</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>375</font></td>
+    <td><font size=2>3</font></td>
+<tr><td><font size=2>States(1)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Randy(5)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2095</font></td>
-    <td><font size=2>2365</font></td>
-    <td><font size=2>610</font></td>
-    <td><font size=2>480</font></td>
+    <td><font size=2>2915</font></td>
+    <td><font size=2>2665</font></td>
+    <td><font size=2>680</font></td>
+    <td><font size=2>385</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2085</font></td>
-    <td><font size=2>2110</font></td>
+    <td><font size=2>2830</font></td>
+    <td><font size=2>2680</font></td>
     <td><font size=2>750</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>2390</font></td>
-    <td><font size=2>2605</font></td>
+    <td><font size=2>3050</font></td>
+    <td><font size=2>3045</font></td>
     <td><font size=2>750</font></td>
     <td><font size=2>410</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Randy(5)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2660</font></td>
+    <td><font size=2>3200</font></td>
+    <td><font size=2>610</font></td>
+    <td><font size=2>480</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -110,43 +111,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>2920</font></td>
-    <td><font size=2>2285</font></td>
-    <td><font size=2>895</font></td>
-    <td><font size=2>470</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Grant(10)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3115</font></td>
-    <td><font size=2>2395</font></td>
+    <td><font size=2>3890</font></td>
+    <td><font size=2>3075</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>420</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Steven(8)</font></td>
+<tr><td><font size=2>Roger(2)</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2415</font></td>
-    <td><font size=2>2730</font></td>
-    <td><font size=2>705</font></td>
-    <td><font size=2>445</font></td>
+    <td><font size=2>3490</font></td>
+    <td><font size=2>3030</font></td>
+    <td><font size=2>895</font></td>
+    <td><font size=2>470</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>1910</font></td>
-    <td><font size=2>2840</font></td>
+    <td><font size=2>2435</font></td>
+    <td><font size=2>3305</font></td>
     <td><font size=2>660</font></td>
     <td><font size=2>315</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Steven(8)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2855</font></td>
+    <td><font size=2>3390</font></td>
+    <td><font size=2>705</font></td>
+    <td><font size=2>440</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1885</font></td>
-    <td><font size=2>2265</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2350</font></td>
+    <td><font size=2>2790</font></td>
     <td><font size=2>775</font></td>
     <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
