--- a/week5.html
+++ b/week5.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mason</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>110</td></tr>
+<tr><td>Mason</td>         <td></td><td align=right>40</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>London</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Karty</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>25</td></tr>
+<tr><td>London</td>        <td></td><td align=right>150</td></tr>
+<tr><td>Bowers</td>        <td></td><td align=right>170</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>180</td></tr>
+<tr><td>Karty</td>         <td></td><td align=right>5</td></tr>
+<tr><td></td>              <td></td><td align=right>680</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>235</td></tr>
+<tr><td>Swift</td>         <td></td><td align=right>85</td></tr>
+<tr><td>Mattison</td>      <td></td><td align=right>10</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>180</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>40</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>175</td></tr>
+<tr><td>Worthy</td>        <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>775</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (2)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>125</td></tr>
+<tr><td>JCook</td>         <td></td><td align=right>90</td></tr>
+<tr><td>Hunt</td>          <td></td><td align=right>100</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>30</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>35</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>25</td></tr>
+<tr><td>McLaughlin</td>    <td></td><td align=right>165</td></tr>
 <tr><td>RDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>570</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
-<tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Reed</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Stroud</td>        <td></td><td align=right>155</td></tr>
+<tr><td>KWilliams</td>     <td></td><td align=right>100</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>55</td></tr>
+<tr><td>GWilson</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Reed</td>          <td></td><td align=right>35</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>CWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Aubrey</td>        <td></td><td align=right>100</td></tr>
+<tr><td>CWilliams</td>     <td></td><td align=right>200</td></tr>
+<tr><td></td>              <td></td><td align=right>745</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
-<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Purdy</td>         <td></td><td align=right>60</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Steele</td>        <td></td><td align=right>0</td></tr>
-<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>BThomas</td>       <td></td><td align=right>0</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>30</td></tr>
+<tr><td>BThomas</td>       <td></td><td align=right>185</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>100</td></tr>
+<tr><td>Nix</td>           <td></td><td align=right>150</td></tr>
+<tr><td></td>              <td></td><td align=right>525</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>55</td></tr>
+<tr><td>Hubbard</td>       <td></td><td align=right>195</td></tr>
 <tr><td>Allgeier</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Cooper</td>        <td></td><td align=right>30</td></tr>
 <tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>80</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>105</td></tr>
 <tr><td>Legette</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>465</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (5)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>370</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>30</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MHarrison</td>     <td></td><td align=right>0</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>-</td>             <td></td><td align=right>0</td></tr>
-<tr><td>Moody</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Little</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Moody</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Little</td>        <td></td><td align=right>115</td></tr>
+<tr><td></td>              <td></td><td align=right>565</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (9)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>265</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>95</td></tr>
 <tr><td>NHarris</td>       <td></td><td align=right>0</td></tr>
-<tr><td>NCollins</td>      <td></td><td align=right>0</td></tr>
+<tr><td>NCollins</td>      <td></td><td align=right>160</td></tr>
 <tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Ferguson</td>      <td></td><td align=right>35</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>110</td></tr>
+<tr><td>Daniels</td>       <td></td><td align=right>170</td></tr>
+<tr><td></td>              <td></td><td align=right>835</td></tr>
 </table>
 </td>
 </tr>
@@ -127,27 +127,27 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
 <tr><td>-</td>             <td></td><td align=right>0</td></tr>
 <tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>85</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>345</td></tr>
 <tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Reichard</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>35</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>20</td></tr>
+<tr><td>Reichard</td>      <td></td><td align=right>175</td></tr>
+<tr><td></td>              <td></td><td align=right>660</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (8)</b></font></td></tr>
-<tr><td>Love</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Love</td>          <td></td><td align=right>180</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>45</td></tr>
+<tr><td>Pitts</td>         <td></td><td align=right>40</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>70</td></tr>
 <tr><td>Benson</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>440</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -166,45 +166,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2235</font></td>
-    <td><font size=2>1890</font></td>
-    <td><font size=2>640</font></td>
-    <td><font size=2>385</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>John(9)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2865</font></td>
-    <td><font size=2>2430</font></td>
+    <td><font size=2>3700</font></td>
+    <td><font size=2>2995</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>375</font></td>
+    <td><font size=2>3</font></td>
+<tr><td><font size=2>States(1)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Randy(5)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2095</font></td>
-    <td><font size=2>2365</font></td>
-    <td><font size=2>610</font></td>
-    <td><font size=2>480</font></td>
+    <td><font size=2>2915</font></td>
+    <td><font size=2>2665</font></td>
+    <td><font size=2>680</font></td>
+    <td><font size=2>385</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2085</font></td>
-    <td><font size=2>2110</font></td>
+    <td><font size=2>2830</font></td>
+    <td><font size=2>2680</font></td>
     <td><font size=2>750</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>2390</font></td>
-    <td><font size=2>2605</font></td>
+    <td><font size=2>3050</font></td>
+    <td><font size=2>3045</font></td>
     <td><font size=2>750</font></td>
     <td><font size=2>410</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Randy(5)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2660</font></td>
+    <td><font size=2>3200</font></td>
+    <td><font size=2>610</font></td>
+    <td><font size=2>480</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -214,43 +214,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>2920</font></td>
-    <td><font size=2>2285</font></td>
-    <td><font size=2>895</font></td>
-    <td><font size=2>470</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Grant(10)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3115</font></td>
-    <td><font size=2>2395</font></td>
+    <td><font size=2>3890</font></td>
+    <td><font size=2>3075</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>420</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Steven(8)</font></td>
+<tr><td><font size=2>Roger(2)</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2415</font></td>
-    <td><font size=2>2730</font></td>
-    <td><font size=2>705</font></td>
-    <td><font size=2>445</font></td>
+    <td><font size=2>3490</font></td>
+    <td><font size=2>3030</font></td>
+    <td><font size=2>895</font></td>
+    <td><font size=2>470</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>1910</font></td>
-    <td><font size=2>2840</font></td>
+    <td><font size=2>2435</font></td>
+    <td><font size=2>3305</font></td>
     <td><font size=2>660</font></td>
     <td><font size=2>315</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Steven(8)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2855</font></td>
+    <td><font size=2>3390</font></td>
+    <td><font size=2>705</font></td>
+    <td><font size=2>440</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1885</font></td>
-    <td><font size=2>2265</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2350</font></td>
+    <td><font size=2>2790</font></td>
     <td><font size=2>775</font></td>
     <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
