--- a/pickups.html
+++ b/pickups.html
@@ -75,8 +75,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tucker Kraft/Luke McCaffrey</td>
+<td width=50>10/8</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -146,8 +146,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tank Bigsby/Ezekiel Elliott</td>
+<td width=50>10/8</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
