--- a/roster.html
+++ b/roster.html
@@ -108,13 +108,13 @@
 <tr><td>HOU</td><td>Tank Dell              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Dalton Schultz         </td></tr>
+<tr><td> GB</td><td>Tucker Kraft           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Jason Myers            </td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Bo Nix                 </td></tr>
 <tr><td>JAX</td><td>Brian Thomas           </td></tr>
-<tr><td>WAS</td><td>Luke McCaffrey         </td></tr>
 <tr><td> KC</td><td>Carson Steele          </td></tr>
 </table>
 </td>
@@ -129,8 +129,8 @@
 <tr><td>MIA</td><td>De'Von Achane          </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
 <tr><td>DAL</td><td>Rico Dowdle            </td></tr>
-<tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
 <tr><td>MIN</td><td>Ty Chandler            </td></tr>
+<tr><td>JAX</td><td>Tank Bigsby            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
