--- a/roster.html
+++ b/roster.html
@@ -40,7 +40,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
 <tr><td>TEN</td><td>Tony Pollard           </td></tr>
-<tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 <tr><td>CIN</td><td>Chase Brown            </td></tr>
 <tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
 <tr><td> KC</td><td>Kareem Hunt            </td></tr>
@@ -58,6 +57,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Malik Nabers           </td></tr>
 <tr><td>BUF</td><td>Ray Davis              </td></tr>
+<tr><td> NO</td><td>Spencer Rattler        </td></tr>
 </table>
 </td>
 <td valign=top>
