--- a/roster.html
+++ b/roster.html
@@ -123,7 +123,6 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Randy (5)</b></font></td></tr>
 <tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
-<tr><td> NO</td><td>Derek Carr             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Bijan Robinson         </td></tr>
 <tr><td>MIA</td><td>De'Von Achane          </td></tr>
@@ -140,6 +139,7 @@
 <tr><td>DET</td><td>Sam LaPorta            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Jake Moody             </td></tr>
+<tr><td> SF</td><td>Matthew Wright         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Marvin Harrison        </td></tr>
 <tr><td>JAX</td><td>Cam Little             </td></tr>
