--- a/week7.html
+++ b/week7.html
@@ -23,12 +23,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (5)</b></font></td></tr>
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Dowdle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Wright</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Little</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MHarrison</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -84,8 +84,8 @@
 <tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
