--- a/roster.html
+++ b/roster.html
@@ -77,12 +77,12 @@
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
 <tr><td> GB</td><td>Jayden Reed            </td></tr>
 <tr><td>SEA</td><td>Jaxon Smith-Njigba     </td></tr>
-<tr><td>BUF</td><td>Curtis Samuel          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Trey McBride           </td></tr>
 <tr><td>JAX</td><td>Evan Engram            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Brandon Aubrey         </td></tr>
+<tr><td>WAS</td><td>Austin Seibert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>Caleb Williams         </td></tr>
 <tr><td>BUF</td><td>Keon Coleman           </td></tr>
@@ -161,7 +161,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Puka Nacua             </td></tr>
 <tr><td> NO</td><td>Chris Olave            </td></tr>
-<tr><td>CLE</td><td>Amari Cooper           </td></tr>
+<tr><td>BUF</td><td>Amari Cooper           </td></tr>
 <tr><td>BUF</td><td>Khalil Shakir          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
@@ -190,7 +190,7 @@
 <tr><td> GB</td><td>Emanuel Wilson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
-<tr><td> LV</td><td>Davante Adams          </td></tr>
+<tr><td>NYJ</td><td>Davante Adams          </td></tr>
 <tr><td>PIT</td><td>George Pickens         </td></tr>
 <tr><td> NO</td><td>Rashid Shaheed         </td></tr>
 <tr><td height=9></td><td></td></tr>
