--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <a href="week4.html"><b>4</b></a>
 <a href="week5.html"><b>5</b></a>
 <a href="week6.html"><b>6</b></a>
-<a href="week7.html"><b>7P</b></a><br>
+<a href="week7.html"><b>7</b></a>
+<a href="week8.html"><b>8P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -66,44 +67,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>4480</font></td>
-    <td><font size=2>3415</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>5000</font></td>
+    <td><font size=2>4220</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>3</font></td>
-<tr><td><font size=2>Randy(5)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3620</font></td>
-    <td><font size=2>3920</font></td>
-    <td><font size=2>960</font></td>
-    <td><font size=2>480</font></td>
-    <td><font size=2>1</font></td>
-<tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3515</font></td>
-    <td><font size=2>3470</font></td>
-    <td><font size=2>750</font></td>
-    <td><font size=2>400</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>States(1)</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3335</font></td>
-    <td><font size=2>3445</font></td>
+    <td><font size=2>3675</font></td>
+    <td><font size=2>3740</font></td>
     <td><font size=2>680</font></td>
-    <td><font size=2>385</font></td>
+    <td><font size=2>340</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>3770</font></td>
-    <td><font size=2>4005</font></td>
+    <td><font size=2>4505</font></td>
+    <td><font size=2>4635</font></td>
     <td><font size=2>750</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4145</font></td>
+    <td><font size=2>4205</font></td>
+    <td><font size=2>750</font></td>
+    <td><font size=2>400</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Randy(5)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3915</font></td>
+    <td><font size=2>4260</font></td>
+    <td><font size=2>960</font></td>
+    <td><font size=2>295</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -113,42 +114,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>4140</font></td>
-    <td><font size=2>3440</font></td>
+    <td><font size=2>5015</font></td>
+    <td><font size=2>3785</font></td>
     <td><font size=2>895</font></td>
     <td><font size=2>470</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(10)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>4300</font></td>
-    <td><font size=2>3725</font></td>
+    <td><font size=2>5020</font></td>
+    <td><font size=2>4260</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Steven(8)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>3540</font></td>
-    <td><font size=2>3635</font></td>
-    <td><font size=2>705</font></td>
+    <td><font size=2>4345</font></td>
+    <td><font size=2>4155</font></td>
+    <td><font size=2>805</font></td>
     <td><font size=2>440</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>3140</font></td>
-    <td><font size=2>3475</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>3675</font></td>
+    <td><font size=2>4195</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>2680</font></td>
-    <td><font size=2>3990</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>3025</font></td>
+    <td><font size=2>4865</font></td>
     <td><font size=2>660</font></td>
     <td><font size=2>245</font></td>
     <td><font size=2>0</font></td>
