--- a/roster.html
+++ b/roster.html
@@ -139,7 +139,7 @@
 <tr><td>DET</td><td>Sam LaPorta            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Jake Moody             </td></tr>
-<tr><td> SF</td><td>Matthew Wright         </td></tr>
+<tr><td>LAC</td><td>Cameron Dicker         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Marvin Harrison        </td></tr>
 <tr><td>JAX</td><td>Cam Little             </td></tr>
@@ -192,7 +192,7 @@
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>NYJ</td><td>Davante Adams          </td></tr>
 <tr><td>PIT</td><td>George Pickens         </td></tr>
-<tr><td> NO</td><td>Rashid Shaheed         </td></tr>
+<tr><td> SF</td><td>Jauan Jennings         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
@@ -221,7 +221,6 @@
 <tr><td>CHI</td><td>Keenan Allen           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
-<tr><td> GB</td><td>Luke Musgrave          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -230,6 +229,7 @@
 <tr><td>LAR</td><td>Blake Corum            </td></tr>
 <tr><td>MIA</td><td>Jaylen Wright          </td></tr>
 <tr><td> TB</td><td>Jalen McMillan         </td></tr>
+<tr><td> SF</td><td>Ricky Pearsall         </td></tr>
 </table>
 </td>
 <td valign=top>
