--- a/pickups.html
+++ b/pickups.html
@@ -331,7 +331,10 @@ States - Isaac Guerendo/Clyde Edwards-Helaire (9/14)<br>
 Matthew - Carson Steele/Audric Estime (9/17)<br>
 John - Chris Boswell/Graham Gano (9/18)<br>
 Sam - Emanuel Wilson/MarShawn Lloyd (9/24)<br>
-Steven - Jalen McMillan/Ricky Pearsall (9/25)
+Steven - Jalen McMillan/Ricky Pearsall (9/25)<br>
+Randy - Cameron Dicker/Matthew Wright (10/22)<br>
+Steven - Ricky Pearsall/Luke Musgrave (10/22)<br>
+Sam - Jauan Jennings/Rashid Shaheed (10/22)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
